# CSCI347-UNIX-Systems-Programming

./: .gitignore  README.md
autotools/: Makefile.am  README  bst.c  bst.h  configure.ac  configure_additions.txt  dir_arr.c  dir_arr.h  expresions  f_list.c  f_list.h  find  find.c  find.h  find_expr.c  find_expr.h  find_list.c  ls  ls.c  ls.h  ls_list.c  ls_list.h  proj_3_progress.txt  unmake
autotools/find/: expr.c  expr.h
autotools/find_src/: expr.c  expr.h  expression.c  expression.h  expression_defs.c  expression_defs.h  expression_prim.c  expression_prim.h  expression_prim_defs.h  expression_prim_eval.c  expression_prim_eval.h  expression_prim_parse.c  expression_prim_parse.h  expression_primaries.c  expression_primaries.h  find  find.c  find.h  list.c  list.h  path_list.c  path_list.h
autotools/find_src/lost_fucking_souls/: expression.c  expression.h  expression_defs.h
autotools/justmakeatestprogram/: main.c  t
autotools/ls/: list.c  list.h  ls.h
autotools/ls_src/: foo  list.c  list.h  long_out.c  long_out.h  ls  ls.c  ls.h  ls_defs.h  print_utils.c  print_utils.h
autotools/test_scripts/: find_cnewer  find_type  ls_multi_path  ls_option_l
autotools/testingtesting/: r  regexmagic.c
autotools/tests/: find_cnewer  find_exists  find_type  ls_exists  ls_multi_option  ls_multi_path  ls_option_a  ls_option_all  ls_option_d  ls_option_i  ls_option_l  ls_order  ls_order_case
cmd_line_proj/autotools/: proj_3_progress.txt
cmd_line_proj/autotools/find_src/: expression.h  find.c  list.h
cmd_line_proj/autotools/tests/: find_exec
cmd_line_proj/proj1/man/man1/: ls.1
cmd_line_proj/proj2/man/man1/: find.1
cmd_line_proj/proj3/man/man1/: ls.1
jacobi_iterator_proj/: count_sem.c  cs  pp  pushitypopity.c
proj1/man/man1/: ls.1
proj2/man/man1/: find.1  ls.1
proj3/man/man1/: find.1
